--- a/static/index.html
+++ b/static/index.html
@@ -4,20 +4,21 @@
 		<meta charset=utf-8>
 		<meta http-equiv=Content-Type content=text/html
 		<title>shblog</title>
+		<link rel=stylesheet type=text/css href=/home/addikt1ve/shblog/static/theme/style.css media=screen />
 	</head>
 	<body>
 		<h1 id=header>shblog</h1>
-		<h2 class=post-title>Lol ?</h2>
-		<p class=post-tags>Tags : toast</p>
-		<div class=post-content>kikoo</div>
-		<hr />
-		<h2 class=post-title>Poast 3</h2>
-		<p class=post-tags>Tags : test</p>
-		<div class=post-content>Encore un.</div>
-		<hr />
-		<h2 class=post-title>Poast ?</h2>
-		<p class=post-tags>Tags : lol, kikoo</p>
-		<div class=post-content>Toast !</div>
-		<hr />
+		<div class=post>
+			<h2 class=post-title>Toast</h2>
+			<p class=post-tags>Tags : toast</p>
+			<div class=post-content>mdr <a href="http://pouet.com">lol</a></div>
+			<hr />
+		</div>
+		<div class=post>
+			<h2 class=post-title>Oh yeah</h2>
+			<p class=post-tags>Tags : fail, lol</p>
+			<div class=post-content>trop cool.</div>
+			<hr />
+		</div>
 	</body>
 </html>
