added the crontask example

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,12 @@
 	<body>
 		<h1 id=header>shblog</h1>
 		<div class=post>
+			<h2 class=post-title>Poast</h2>
+			<p class=post-tags>Tags : toast, blog</p>
+			<div class=post-content>Lol ?</div>
+			<hr />
+		</div>
+		<div class=post>
 			<h2 class=post-title>Toast</h2>
 			<p class=post-tags>Tags : toast</p>
 			<div class=post-content>mdr <a href="http://pouet.com">lol</a></div>
@@ -18,6 +24,12 @@
 			<h2 class=post-title>Oh yeah</h2>
 			<p class=post-tags>Tags : fail, lol</p>
 			<div class=post-content>trop cool.</div>
+			<hr />
+		</div>
+		<div class=post>
+			<h2 class=post-title>Un simple test</h2>
+			<p class=post-tags>Tags : test, toast, shblog</p>
+			<div class=post-content>On sait jamais :-)</div>
 			<hr />
 		</div>
 	</body>
