restructuration, dynamic paths

--- a/static/index.html
+++ b/static/index.html
@@ -9,27 +9,9 @@
 	<body>
 		<h1 id=header>shblog</h1>
 		<div class=post>
-			<h2 class=post-title>Poast</h2>
-			<p class=post-tags>Tags : toast, blog</p>
-			<div class=post-content>Lol ?</div>
-			<hr />
-		</div>
-		<div class=post>
-			<h2 class=post-title>Toast</h2>
-			<p class=post-tags>Tags : toast</p>
-			<div class=post-content>mdr <a href="http://pouet.com">lol</a></div>
-			<hr />
-		</div>
-		<div class=post>
-			<h2 class=post-title>Oh yeah</h2>
-			<p class=post-tags>Tags : fail, lol</p>
-			<div class=post-content>trop cool.</div>
-			<hr />
-		</div>
-		<div class=post>
-			<h2 class=post-title>Un simple test</h2>
-			<p class=post-tags>Tags : test, toast, shblog</p>
-			<div class=post-content>On sait jamais :-)</div>
+			<h2 class=post-title>Premier billet</h2>
+			<p class=post-tags>Tags : blog, billet, kikoo, pouet</p>
+			<div class=post-content>Un premier billet trop kikoo :-)</div>
 			<hr />
 		</div>
 	</body>
