--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 		<meta charset=utf-8>
 		<meta http-equiv=Content-Type content=text/html
 		<title>shblog</title>
-		<link rel=stylesheet type=text/css href=/home/addikt1ve/shblog/static/theme/style.css media=screen />
+		<link rel=stylesheet type=text/css href=theme/style.css media=screen />
 	</head>
 	<body>
 		<h1 id=header>shblog</h1>
@@ -14,5 +14,6 @@
 			<div class=post-content>Un premier billet trop kikoo :-)</div>
 			<hr />
 		</div>
+		<p id=footer>powered by <a href=http://github.com/addikt1ve/shblog>shblog</a>
 	</body>
 </html>
