sort -r to have desceding order

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,22 @@
 	<body>
 		<h1 id=header>shblog</h1>
 		<div class=post>
+			<h2 class=post-title>Ça fait quoi</h2>
+			<p class=post-tags>Tags : </p>
+			<div class=post-content>Sans les tags ?</div>
+			<hr />
+		</div>
+		<div class=post>
+			<h2 class=post-title>Test</h2>
+			<p class=post-tags>Tags : encore, un, nouveau, billet, inutile</p>
+			<div class=post-content>Sans les tags ! On va voir l'ordre d'affichage.
+Mais ça semble compromis à cause de ce con de daemon !
+Allez, fais pas ta pute. Bâtard.
+POURQUOI CE CON DE POIDS N'AUGMENTE PAS ???!§§
+FUUUUUUUUUUUU-</div>
+			<hr />
+		</div>
+		<div class=post>
 			<h2 class=post-title>Premier billet</h2>
 			<p class=post-tags>Tags : blog, billet, kikoo, pouet</p>
 			<div class=post-content>Un premier billet trop kikoo :-)</div>
