--- a/static/index.html
+++ b/static/index.html
@@ -11,9 +11,17 @@
 		<span id=desc>un blog en bash</span>
 		<div id=content>
 			<div class=post>
-				<h2 class=post-title>Premier billet</h2>
-				<p class=post-tags>Tags : blog, billet, kikoo, pouet</p>
-				<div class=post-content>Un premier billet trop kikoo :-)</div>
+				<h2 class=post-title>Another brick in the wall</h2>
+				<span class=post-tags>Tags : blog, post, test</span>
+				<span class=post-author>by addikt1ve</span>
+				<div class=post-content>All in all you're just another brick in the wall!</div>
+				<hr />
+			</div>
+			<div class=post>
+				<h2 class=post-title>First post</h2>
+				<span class=post-tags>Tags : blog, post, test</span>
+				<span class=post-author>by addikt1ve</span>
+				<div class=post-content>First post ever using shblog :-)</div>
 				<hr />
 			</div>
 		</div>
